--- a/OMNIFOOD/ressources/css/style.css
+++ b/OMNIFOOD/ressources/css/style.css
@@ -1,5 +1,5 @@
 /* -------------------------------- */
-/* BASIC SETUP */
+/* -------- BASIC SETUP ----------- */
 /* -------------------------------- */
 *{
     margin: 0;
@@ -13,28 +13,92 @@ html{
     font-size: 20px;
 }
 /* -------------------------------- */
-/* REUSABLE COMPONENTS*/
+/* ----- REUSABLE COMPONENTS ------ */
 /* -------------------------------- */
 .row {
     max-width: 1140px;
     margin: 0 auto;
 }
+section{
+    padding: 80px 0;
+}
+.box{
+    padding: 1%;
+}
+
+
 /* -------------------------------- */
-/* HEADINGS*/
+/* ----------- HEADINGS ----------- */
 /* -------------------------------- */
 
-h1{
+h1, 
+h2,
+h3  {
+    font-weight: 300;
+    text-transform: uppercase;
+    
+    }
+
+h1 {
     margin-top: 0;
     margin-bottom: 20px;
     color: #fff;
     font-size: 240%;
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1px;
     word-spacing: 4px;
+    letter-spacing: 1px;
 }
+h2 {
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+}
+
+h2:after{
+    display: block;
+    height: 2px;
+    background:#e67e22 ;
+    content: " ";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+h3{
+    font-size:110%;
+    margin-bottom: 15px;
+}
+
+
 /* -------------------------------- */
-/* BUTTONS*/
+/* ----------- PARAGRAPHS --------- */
+/* -------------------------------- */
+.long-copy{
+    line-height: 140%;
+    width: 70%;
+    margin-left: 15%;
+}
+
+.box p {
+    font-size: 90%;
+    line-height: 145%;
+}
+
+/* -------------------------------- */
+/* ----------- ICONS -------------- */
+/* -------------------------------- */
+
+.icon-big{
+    font-size: 350%;
+    display: block;
+    color: #e67e22;
+    margin-bottom: 10px;
+}
+
+
+/* -------------------------------- */
+/* ----------- BUTTONS ------------ */
 /* -------------------------------- */
 .btn:link,
 .btn:visited{
@@ -75,7 +139,7 @@ h1{
     color: #fff;
 }
 /* -------------------------------- */
-/* HEADER */
+/* ----------- HEADER ------------- */
 /* -------------------------------- */
 header{
     background: linear-gradient(rgb(0, 0, 0, .7),rgb(0, 0, 0, .7)),url(../css/img/hero.jpg);
