--- a/OMNIFOOD/ressources/css/style.css
+++ b/OMNIFOOD/ressources/css/style.css
@@ -72,6 +72,16 @@ h3{
 
 
 /* -------------------------------- */
+/* ----------- FEATURES ----------- */
+/* -------------------------------- */
+.section-copy .long-copy{
+    margin-bottom: 30px;
+}
+
+
+
+
+/* -------------------------------- */
 /* ----------- PARAGRAPHS --------- */
 /* -------------------------------- */
 .long-copy{
@@ -184,4 +194,38 @@ header{
 .main-nav li a:hover,
 .main-nav li a:active{
     border-bottom: 2px solid #e67e22;
+}
+/* -------------------------------- */
+/* ------------ MEALS ------------- */
+/* -------------------------------- */
+.section-meals{
+    padding: 0;
+}
+.meals-showcase{
+    list-style: none;
+    width: 100%;
+}
+
+.meals-showcase li{
+    display: block;
+    float: left;
+    width: 25%;
+}
+.meal-photo{
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    background: #000;
+}
+.meal-photo img{
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    transform: scale(1.15);
+    transition: transform 0.5s;
+}
+
+.meal-photo img:hover{
+    opacity: 1;
+    transform: scale(1.05);
 }
