--- a/OMNIFOOD/ressources/css/style.css
+++ b/OMNIFOOD/ressources/css/style.css
@@ -229,3 +229,29 @@ header{
     opacity: 1;
     transform: scale(1.05);
 }
+
+/* -------------------------------- */
+/* --------- HOW IT WORKS --------- */
+/* -------------------------------- */
+.steps-box{
+    margin-top: 30px;
+}
+
+.steps-box:first-child{
+    text-align: right;
+    padding-right: 3%;
+}
+.steps-box:last-child{
+    padding-left: 3%;
+}
+
+.app-screen{
+    width: 40%;
+}
+.works-step {
+    margin-bottom: 50px;
+}
+
+.works-step div {
+    color: #e67e22;
+}
