--- a/OMNIFOOD/ressources/css/style.css
+++ b/OMNIFOOD/ressources/css/style.css
@@ -12,6 +12,15 @@ html{
     font-weight: 300;
     font-size: 20px;
 }
+.clearfix {zoom: 1} 
+.clearfix:after{
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    }
+
 /* -------------------------------- */
 /* ----- REUSABLE COMPONENTS ------ */
 /* -------------------------------- */
@@ -233,16 +242,18 @@ header{
 /* -------------------------------- */
 /* --------- HOW IT WORKS --------- */
 /* -------------------------------- */
-.steps-box{
-    margin-top: 30px;
-}
 
+.section-steps{
+    background-color: #f4f4f4;
+}
 .steps-box:first-child{
     text-align: right;
     padding-right: 3%;
+    margin-top: 30px;
 }
 .steps-box:last-child{
     padding-left: 3%;
+    margin-top: 70px;
 }
 
 .app-screen{
@@ -252,6 +263,26 @@ header{
     margin-bottom: 50px;
 }
 
+.works-step:last-of-type{
+    margin-bottom: 80px;
+}
+
+
 .works-step div {
     color: #e67e22;
+    border: 2px solid #e67e22;
+    display: inline-block;
+    border-radius: 50%;
+    height: 55px;
+    width: 55px;
+    text-align: center;
+    padding: 5px;
+    float:left;
+    font-size: 150%;
+    margin-right: 25px;
+}
+.btn-app img{
+    height: 60px;
+    width: auto;
+    margin-right: 10px;
 }
