--- a/OMNIFOOD/ressources/css/style.css
+++ b/OMNIFOOD/ressources/css/style.css
@@ -114,6 +114,40 @@ h3{
     color: #e67e22;
     margin-bottom: 10px;
 }
+.icon-small{
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 120%;
+
+    /* secrets to align text and icons */
+
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top:-5px;
+    margin-right: 10px;
+}
+
+
+
+/* -------------------------------- */
+/* ------------ LINKS ------------- */
+/* -------------------------------- */
+a:link,
+a:visited{
+    color: #e67e22;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: 1px solid #e67e22;
+}
+
+a:hover,
+a:active{
+    color: #555;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.2s, color 0.2s;
+}
 
 
 /* -------------------------------- */
@@ -165,6 +199,7 @@ header{
     background-size: cover;
     background-position: center;
     height: 100vh;
+    background-attachment: fixed;
 }
 .hero-text-box{
     position: absolute;
@@ -281,8 +316,63 @@ header{
     font-size: 150%;
     margin-right: 25px;
 }
+.btn-app:link, .btn-app:visited{
+    border: 0;
+}
 .btn-app img{
     height: 60px;
     width: auto;
     margin-right: 10px;
+}
+/* -------------------------------- */
+/* ------------ CITIES ------------ */
+/* -------------------------------- */
+
+.box img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+.city-feature{
+    margin-bottom: 5px;
+}
+
+/* -------------------------------- */
+/* --------- TESTIMONIALS --------- */
+/* -------------------------------- */
+
+.section-testimonials{
+    background-image: linear-gradient(rgb(0, 0, 0, .8),rgb(0, 0, 0, .8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25%;
+    display: block;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -3;
+}
+cite img{
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
 }
